# simple_ssh_uploadfile

./: Cargo.toml  LICENSE  Readme.md  config.toml  test.cmd
src/: main.rs
